# Sentinel-server

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  INFO.md  LICENSE  README.md  accounts.cpp  build.sh  console.cpp  console.h  hashing.h  menu.cpp  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  test_build.yml
KRapp-server/src/: Main.cpp
KRapp-server/src/Account/: AccountManager.cpp  AccountManager.hpp  account.cpp  account.hpp
KRapp-server/src/Core/: UNIX_TS.hpp  UUID.hpp
KRapp-server/src/Storage/: Database.cpp  Database.hpp  Table.cpp  Table.hpp
account/: AccountManager.hpp  account.cpp  account.hpp
builds/ninja-multi-vcpkg/: CMakeCache.txt
cmake/: FindBotan.cmake
controllers/: WebSocketAccount.cpp  WebSocketAccount.hpp  WebSocketChat.cpp  WebSocketChat.hpp  ws_server.cpp  ws_server.hpp
database/: database.cpp  database.hpp
enc_temp_folder/3617d8342f1b3f93ced38c1c4c78f5b/: ws_server.cpp
include/: accounts.h  accounts.hpp  console.h  hashing.h  main.h  main.hpp  menu.h
main/: main.cpp  main.hpp
menu/: menu.cpp  menu.hpp
security/: hashing.cpp  hashing.hpp
server/: ws_server.cpp  ws_server.hpp
src/: Main.cpp  PaypalFinal.cpp  accounts.cpp  console.cpp  hashing.cpp  main.cpp  menu.cpp
src/Account/: Account.cpp  Account.hpp  AccountManager.cpp  AccountManager.hpp
src/Configuration/: AccountsTableConfiguration.hpp  DatabaseTables.cpp  DatabaseTables.hpp  DeletedAccountsTableConfiguration.hpp
src/Core/: Account.cpp  Account.hpp  AccountManager.cpp  AccountManager.hpp  Database.cpp  Database.hpp  RecoveryPhrase.hpp  SQLiteDatabaseTable.hpp  UUID.hpp  UnixTimestamp.hpp  Username.hpp
src/Storage/: Database.cpp  Database.hpp  DatabaseTable.cpp  DatabaseTable.hpp  PublicKeyStore.cpp  PublicKeyStore.hpp  Table.cpp  Table.hpp
src/Utils/: Base64.cpp  Base64.hpp  CryptoVerifier.cpp  CryptoVerifier.hpp  E2E.cpp  E2E.hpp  RateLimiter.hpp  UNIX_TS.hpp  UUID.hpp  UsernameValidator.hpp  Utils.cpp  Utils.hpp
src/WebSocketControllers/: WebSocketAccount.cpp  WebSocketAccount.hpp  WebSocketChat.cpp  WebSocketChat.hpp
src/account/: AccountManager.cpp  account.cpp  account.hpp  account_manager.hpp
src/storage/: database.cpp  database_table.cpp  database_table.hpp
src/utils/: unix_timestamp.hpp
storage/: Database.cpp  Database.hpp  Table.cpp  Table.hpp  Tables.cpp  Tables.hpp
storage/tables/: AccountsTable.cpp  AccountsTable.hpp
tests/: Base64Tests.cpp  CMakeLists.txt  E2ETests.cpp  RateLimiterTests.cpp
utils/: utils.cpp  utils.hpp
(+8 files in other folders)
